# feathery-ml

./: README.md  main.py  pyproject.toml  qna.json  requirements.txt
src/ai_engine/: code_generator.py
src/chat_manager/: chat_session.py
src/cli/: main.py
src/config_manager/: config_handler.py
src/data_handlers/: data_processor.py
src/git_manager/: git_controller.py
src/project_manager/: project_initializer.py  query_manager.py
src/utils/: banner.py  logger.py
tests/: test_core.py
